This fixes #28, header cuts of title on mobile

--- a/style.css
+++ b/style.css
@@ -2998,6 +2998,7 @@ body.custom-background {
 		padding-bottom: 33px;
 	}
 }
+
 @media (max-width: 992px) {
 
 	.purchase-now .red-btn{
@@ -3030,15 +3031,13 @@ body.custom-background {
 }
 @media (max-width: 767px) {
 
-	.navbar-inverse .navbar-nav li:hover > ul.sub-menu {
-		display: none;
-	}
-
+	/* HEADER */
 	.bs-navbar-collapse {
 		border: 0;
 	}
 	#main-nav {
 		overflow: hidden;
+		margin-bottom:1px;
 	}
 	.navbar-inverse .navbar-nav {
 		padding-left: 10px;
@@ -3049,7 +3048,83 @@ body.custom-background {
 		display: inline-block;
 		margin-bottom: 0;
 	}
-
+	.navbar-inverse .navbar-nav > li {
+		width: 100%;
+		border-bottom: 1px solid #EDEDED;
+		position: relative;
+		margin: 8px 0 0 0;
+		padding: 0 0 8px 0;
+	}
+	.navbar-inverse .navbar-nav > li  a {
+		text-align: left;
+	}
+	.navbar-inverse .navbar-nav ul.sub-menu {
+		display: none !important;
+		position: relative;
+		top: 0;
+		box-shadow: none;
+		width: 100%;
+	}
+	.navbar-inverse .navbar-nav li.this-open > ul {
+		display: block !important;
+	}
+	.navbar-inverse .navbar-nav ul.sub-menu li {
+		width: 100%;
+		float: left;
+	}
+	.navbar-inverse .navbar-nav ul.sub-menu li a {
+		width: 100%;
+		float: left;
+		padding: 8px 25px 8px 0;
+		border-bottom: 1px solid #EDEDED;
+	}
+	.navbar-inverse .navbar-nav ul.sub-menu li:last-child a {
+		border-bottom: none;
+	}
+	.navbar-inverse .navbar-nav ul.sub-menu ul.sub-menu {
+		position: relative;
+		left: 0;
+		top: 0;
+	}
+	#main-nav {
+		overflow: visible;
+	}
+	#main-nav,
+	#main-nav.fixed {
+		position: relative;
+	}
+	.navbar-collapse {
+		max-height: 100%;
+	}
+	.navbar-inverse .navbar-nav ul.sub-menu li {
+		padding-left: 20px;
+	}
+	.navbar-inverse .navbar-nav ul.sub-menu li {
+		padding-bottom: 0;
+		padding-top: 0;
+	}
+	.dropdownmenu {
+		position: absolute;
+		z-index: 9;
+		right: 0;
+		top: 5px;
+		width: 25px;
+		height: 25px;
+		margin: 0;
+		padding: 0;
+		border-radius: 3px;
+		background: url(images/menu-icon.png) center center no-repeat #e96656;
+	}
+	.navbar-inverse .navbar-nav ul.sub-menu li{
+		margin-right: 0;
+		padding-right: 0;
+	}
+	.navbar-inverse .navbar-nav > li > a:hover {
+		color: #404040 !important;
+	}
+	.this-open > a {
+		color: #e96656 !important;
+	}
 
     /* HOME */
 	.header {
